src/test/resources/org/xmlcml/www/cmlcomp/invalid/undefined-molecule.cml
<?xml version="1.0" encoding="UTF-8"?>
<cml
    convention="conventions:cmlcomp"
    cmlx:note="A cmlcomp containing undefined cmlcomp element, i.e. molecule, is invalid."
    xmlns="http://www.xml-cml.org/schema"
    xmlns:xsd="http://www.w3.org/2001/XMLSchema"
    xmlns:conventions="http://www.xml-cml.org/conventions/"
    xmlns:cmlx="http://www.xml-cml.org/schema/cmlx">
    <molecule></molecule>
</cml>